--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,1 +1,9 @@
 <h1>THIS IS NOT INSTAGRAM!</h1>
+
+<% @grams.each do |gram| %>
+<div>
+  <%= gram.message %>
+  <%= image_tag gram.picture %>
+  
+</div>
+<% end %>
